
<resources>
    <string name="app_name">MyRelationTracker</string>

    <!-- Strings related to login -->
    <string name="prompt_email">UserName</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="first_Name">First Name</string>
    <string name="last_Name">Last Name</string>
    <string name="occupation">Select</string>
    <string name="gender">Select</string>
    <string name="UserName">UserName</string>
    <string name="Password">Password</string>
    <string name="Chose_UserName">Your UserName</string>
    <string name="Chose_Password">Your Password</string>

    <string name="action_sign_up">Sign UP!</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_in_short">signin</string>
    <string name="completion">What would you like to do ?</string>
    <string name="end_test">END QUIZ</string>
    <string name="ok_label">OK</string>
    <string name="dismiss_label">Dismiss</string>
    <string name="clear_all_label">ClearAll</string>
    <string name="select_interest">Select Interest</string>
    <string name="select_occupation">Select Occupation</string>
    <string name="select_hobbies">select hobbies</string>
    <string name="select_religion">select religion</string>
    <string name="select_knowing">Select How do you Know this person?</string>
    <string name="select_closeness">Select How Close you are?</string>
    <string name="select_commfreq">Select Often you communicate this person?</string>
    <string name="select_commtopic">Select Communication Topic with this person?</string>
    <string name="select_country">select country</string>


</resources>

