<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinRelationReligion"
        android:text="@string/select_religion"
        style="?android:attr/spinnerStyle"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinRelationCountry"
        android:text="@string/select_country"
        style="?android:attr/spinnerStyle"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinRelationKnowing"
        android:text="@string/select_knowing"
        style="?android:attr/spinnerStyle"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinRelationCloseness"
        android:text="@string/select_closeness"
        style="?android:attr/spinnerStyle"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinRelationCommunication"
        android:text="@string/select_commfreq"
        style="?android:attr/spinnerStyle"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinRelationCommTopic"
        android:text="@string/select_commtopic"
        style="?android:attr/spinnerStyle"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Finish"
        android:id="@+id/btnRelationFinish"/>


</LinearLayout>