<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:orientation="vertical" >


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimary">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_Name"
                android:id="@+id/edtRelationFirsName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_Name"
                android:id="@+id/edtRelationLastName" />
        </android.support.design.widget.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:textSize="20dp"
            android:paddingTop="@dimen/activity_vertical_margin">

        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/RelationGendergroup"
            >

            <RadioButton
                android:text="Male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioRelationBtnMale"
                android:layout_weight="0.25" />

            <RadioButton
                android:text="Female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:id="@+id/radioRelationBtnfemale"/>

        </RadioGroup>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Married Status"
            android:textSize="20dp"
            android:paddingTop="@dimen/activity_vertical_margin">

        </TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/RelationMarriedStatus"
            >

            <RadioButton
                android:text="Married"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radioRelationBtnMarried"
                android:layout_weight="0.25" />

            <RadioButton
                android:text="Unmarried"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:id="@+id/radioRelationBtnUnmarried"/>

        </RadioGroup>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Age"
                android:id="@+id/edtRelationAge" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinRelationOccupation"
            android:text="@string/select_occupation"
            style="?android:attr/spinnerStyle"

            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinRelationInterest"
            android:text="@string/select_interest"
            style="?android:attr/spinnerStyle"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinRelationHobbies"
            android:text="@string/select_hobbies"
            style="?android:attr/spinnerStyle"
            />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Next Page"
            android:id="@+id/btnRelationNext"/>

    </LinearLayout>
</ScrollView>